--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Parking Registration</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 </head>
+
 <body>
 
 	<div class="bg-contact2" style="background-image: url('images/parking_bg.jpg');">
-		<span class="contact2-form-title" style="padding-top: 30px; padding-bottom:30px;color:white;">
+		<span class="contact2-form-title" style="padding-top: 30px;color:white;">
 			Parking Registration
 		</span>
 		<div class="row">
@@ -35,26 +37,26 @@
 							<span class="contact2-form-title">
 								Park Car
 							</span>
-		
+
 							<div class="wrap-input2 validate-input" data-validate="Name is required">
-								<input class="input2" type="text" name="name">
+								<input id="input-clientName" class="input2" type="text" name="clientName">
 								<span class="focus-input2" data-placeholder="NAME"></span>
 							</div>
-		
+
 							<div class="wrap-input2 validate-input">
-								<input class="input2" type="text" name="carModel">
+								<input id="input-carModel" class="input2" type="text" name="carModel">
 								<span class="focus-input2" data-placeholder="CAR MODEL"></span>
 							</div>
-		
-							<div class="wrap-input2 validate-input" >
-								<input class="input2" type="text" name="carPlate">
+
+							<div class="wrap-input2 validate-input">
+								<input id="input-carPlate" class="input2" type="text" name="carPlate">
 								<span class="focus-input2" data-placeholder="PLATE NUMBER"></span>
 							</div>
-		
+
 							<div class="container-contact2-form-btn">
 								<div class="wrap-contact2-form-btn">
 									<div class="contact2-form-bgbtn"></div>
-									<button class="contact2-form-btn" href="">
+									<button id="btn-register" class="contact2-form-btn" >
 										Register
 									</button>
 								</div>
@@ -71,26 +73,16 @@
 							<span class="contact2-form-title">
 								Remove Car
 							</span>
-		
-							<div class="wrap-input2 validate-input" data-validate="Name is required">
-								<input class="input2" type="text" name="name">
-								<span class="focus-input2" data-placeholder="NAME"></span>
-							</div>
-		
+
 							<div class="wrap-input2 validate-input">
-								<input class="input2" type="text" name="carModel">
-								<span class="focus-input2" data-placeholder="CAR MODEL"></span>
-							</div>
-		
-							<div class="wrap-input2 validate-input" >
-								<input class="input2" type="text" name="carPlate">
+								<input id="remove-carPlate" class="input2" type="text" name="carPlate">
 								<span class="focus-input2" data-placeholder="PLATE NUMBER"></span>
 							</div>
-		
+
 							<div class="container-contact2-form-btn">
 								<div class="wrap-contact2-form-btn">
 									<div class="contact2-form-bgbtn"></div>
-									<button class="contact2-form-btn" href="">
+									<button id="btn-remove" class="contact2-form-btn" href="">
 										Remove
 									</button>
 								</div>
@@ -100,23 +92,44 @@
 				</div>
 			</div>
 		</div>
+		<div class="container-contact2">
+			<div class="wrap-contact2">
+				<form class="contact2-form validate-form">
+					<span class="contact2-form-title">
+						Clients Parked
+					</span>
 
-		
-		
+					<div class="list-group">
+						<a class="list-group-item">First item</a>
+						<a class="list-group-item">Second item</a>
+						<a class="list-group-item">Third item</a>
+						<a class="list-group-item">First item</a>
+						<a class="list-group-item">Second item</a>
+						<a class="list-group-item">Third item</a>
+					</div>
+
+				</form>
+			</div>
+		</div>
+
+
+
+
 	</div>
 
 
 
 
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
 </body>
+
 </html>
