--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<title>Parking Registration</title>
+	<title>Contact V2</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 </head>
-
 <body>
 
 	<div class="bg-contact2" style="background-image: url('images/parking_bg.jpg');">
-		<span class="contact2-form-title" style="padding-top: 30px;color:white;">
-			Parking Registration
-		</span>
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="container-contact2">
@@ -38,7 +33,7 @@
 								Park Car
 							</span>
 
-							<div class="wrap-input2 validate-input" data-validate="Name is required">
+							<div class="wrap-input2 validate-input">
 								<input id="input-clientName" class="input2" type="text" name="clientName">
 								<span class="focus-input2" data-placeholder="NAME"></span>
 							</div>
@@ -92,44 +87,20 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-contact2">
-			<div class="wrap-contact2">
-				<form class="contact2-form validate-form">
-					<span class="contact2-form-title">
-						Clients Parked
-					</span>
-
-					<div class="list-group">
-						<a class="list-group-item">First item</a>
-						<a class="list-group-item">Second item</a>
-						<a class="list-group-item">Third item</a>
-						<a class="list-group-item">First item</a>
-						<a class="list-group-item">Second item</a>
-						<a class="list-group-item">Third item</a>
-					</div>
-
-				</form>
-			</div>
-		</div>
-
-
-
-
 	</div>
 
 
 
 
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
-	<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
 </body>
-
 </html>
